inist-tools (0.9.9) RC; urgency=medium

  * Version Release Candidate en cours de finalisation avant publication
    de
  * Prise en chage du PROXY INIST (on et off) pour :
    - le système dans son ensemble
    - les consoles avec et sans login
    - apt
    - npm
    - firefox / iceweasel (seulement le premier profil)
    Pour l'instant, Chrome/Chromium n'est pas supporté.
  * Prise en charge du rechargement de la commande « inist »
  * [DEV] Ajout de la section « make » dans README.md
  * [DEV] Ajout de la gestion du sourçage de /opt/inist-tools/inistrc
    dans le .bashrc de l'utilisateur en postins/postrm
  * [DEV] Conserve le statut « inist proxy on » pour le répercuter sur
    l'ouverture d'une nouvelle console
  * [DEV] Lancement des TU à chaque 'git push'
  * [DEV] Correction du fichier .travis.yml
  * [DEV] Correction du fichier .travis.yml (2)
  * [DEV] Correction du fichier .travis.yml (3)

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200